# pico-sync-motor-dev

./: .gitignore  CMakeLists.txt  in1.pio  in2.pio  main.c  off1.pio  off2.pio  spe1.pio  spe2.pio
.github/workflows/: cmake-single-platform.yml
src/: pico_servo.c  pico_servo.h
